--- a/frontend/public/index-maqueta.htm
+++ b/frontend/public/index-maqueta.htm
@@ -42,7 +42,7 @@
               <div class="card">
                 <div class="card-body">
                   
-                  <form class="row row-cols-lg-auto g-3 align-items-center justify-content-end">
+                  <form class="row row-cols-lg-auto g-3 align-items-center">
                     <div class="col-sm-3">
                       <label class="visually-hidden" for="param">Estación</label>
                       <select class="form-select" id="station">
@@ -68,6 +68,10 @@
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                       </select>
+                    </div>
+                    <div class="col-sm-2">
+                      <button type="submit" class="btn btn-primary">Buscar</button>
+
                     </div>
                   </form>
                 </div>
@@ -137,7 +141,7 @@
           
         </main>
 
-        <footer class="pt-3 my-md-3 pt-md-2 border-top">
+        <footer class="pt-3 my-md-3 pt-md-2 border-top bg-light text-dark">
             <div class="row">
               <div class="col-12 col-md">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-broadcast" viewBox="0 0 16 16">
