agregado el modelo de datos

--- a/frontend/public/index-maqueta.htm
+++ b/frontend/public/index-maqueta.htm
@@ -22,10 +22,10 @@
             </a>
       
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-              <a class="me-3 py-2 text-dark text-decoration-none" href="#">Menu 1</a>
+              <!--a class="me-3 py-2 text-dark text-decoration-none" href="#">Menu 1</a>
               <a class="me-3 py-2 text-dark text-decoration-none" href="#">menu 2</a>
-              <a class="me-3 py-2 text-dark text-decoration-none" href="#">menu 3</a>
-              <a class="py-2 text-dark text-decoration-none" href="#">menu4</a>
+              <a class="me-3 py-2 text-dark text-decoration-none" href="#">menu 3</a-->
+              <a class="py-2 text-dark text-decoration-none" href="#">Cerrar sesión</a>
             </nav>
           </div>
       
